--- a/index.html
+++ b/index.html
@@ -15,184 +15,67 @@
   </div>
 
   <header>
-    <a href="#" class="brand">Samar</a>
+    <a href="#" class="brand">Prem Savdo Lux</a>
     <div class="menu-btn"></div>
     <div class="navigation">
-      <a href="#main">home</a>
-      <a href="#about">about</a>
-      <a href="#skills">skills</a>
-      <a href="#services">services</a>
-      <a href="#work">work</a>
-      <a href="#contact">contact</a>
+      <a href="#main">Главная</a>
+      <a href="#about">О нас</a>
+      <a href="#katalog">Каталог</a>
+      <a href="#contact">Контакты</a>
     </div>
   </header>
 
   <section class="main" id="main">
     <div class="content">
-      <h2>Hello, I'm <br> <span>Samar Badriddinov</span> </h2>
+      <h2>Эксклюзивные <br> <span>Двери для изысконного дома!</span> </h2>
       <div class="animated-text">
-        <h3>Blogger</h3>
-        <h3>Web Developer</h3>
-        <h3>Youtuber</h3>
+        <h3>МДФ Двери</h3>
+        <h3>Обрешетки</h3>
+        <h3>Меж комнатные</h3>
       </div>
-      <a href="#" class="btn">See My Work</a>
+      <a href="#" id="myModal" class="btn">Каталог</a>
       <div class="media-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-telegram"></i></a>
       </div>
     </div>
   </section>
 
   <section class="about" id="about">
     <div class="title reveal">
-      <div class="section-title">About Me</div>
+      <div class="section-title">О нас</div>
     </div>
     <div class="content">
       <div class="column col-left reveal">
         <div class="img-card">
-          <img src="./images/img1.png" alt="">
+          <img src="./img/2890506.jpg" alt="">
         </div>
       </div>
       <div class="column col-right reveal">
-        <h2 class="content-title">Hey there! I'm Samar Badriddinov</h2>
-        <p class="paragraph-text">Officiis, eos pariatur esse velit veritatis reiciendis cum quod possimus quas? Modi adipisci odit voluptatem tempora error perferendis quisquam, dolores iure, ullam id nam quaerat dolor incidunt, ratione aliquam deserunt eaque explicabo nostrum quo veniam expedita distinctio dolorem. Aspernatur consectetur eum vitae nobis.</p> <br>
-        <p class="paragraph-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis ullam deserunt debitis. Rerum necessitatibus accusantium, ipsa, officiis, eos pariatur esse velit veritatis reiciendis cum quod possimus quas? Modi adipisci odit voluptatem tempora error perferendis quisquam, dolores iure, ullam id nam</p>
-        <a href="#" class="btn">See More</a>
+        <h2 class="content-title">Prem Savdo Lux</h2>
+        <p class="paragraph-text">Наша компания "Prem Savdo Lux" - имеет многолетний опыт работы.  Мы продаем двери с 2011 года. За это время тысячам клиентов были установлены новые  качественные входные и межкомнатные двери.</p> <br>
+        <p class="paragraph-text">Кроме розничных продаж  мы успели получить хороший опыт в собственном  производстве межкомнатных  дверей МДФ, а также входных металлических дверей, изготавливаемых по индивидуальному заказу.  Наша компания устанавливала двери как розничным покупателям, так и на крупные строительные объекты.</p>
       </div>
     </div>
   </section>
-
-  <section class="skills" id="skills">
+  
+  <section class="work" id="katalog">
     <div class="title reveal">
-      <div class="section-title">My Skills</div>
+      <div class="section-title">Каталог</div>
     </div>
     <div class="content">
-      <div class="column col-left reveal">
-        <h2 class="content-title">My Skills and Experiences</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#" class="btn">See More</a>
-      </div>
-      <div class="column col-right reveal">
-        <div class="bar">
-          <div class="info">
-            <span>HTML</span>
-            <span>95%</span>
-          </div>
-          <div class="line html"></div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>CSS</span>
-            <span>85%</span>
-          </div>
-          <div class="line css"></div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>JavaScript</span>
-            <span>80%</span>
-          </div>
-          <div class="line javascript"></div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>jQuery</span>
-            <span>80%</span>
-          </div>
-          <div class="line jquery"></div>
-        </div>
-        <div class="bar">
-          <div class="info">
-            <span>PHP</span>
-            <span>70%</span>
-          </div>
-          <div class="line php"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="services" id="services">
-    <div class="title reveal">
-      <div class="section-title">My Services</div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde molestias accusamus modi molestiae praesentium ipsam doloribus repudiandae, reiciendis nesciunt consectetur distinctio dignissimos, vel suscipit ipsum consequatur adipisci sed sint provident?</p>
-    </div>
-    <div class="content">
-      <div class="card reveal">
-        <div class="service-icon">
-          <i class="fas fa-palette"></i>
-        </div>
-        <div class="info">
-          <h3>Web Design</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="service-icon">
-          <i class="fas fa-file-code"></i>
-        </div>
-        <div class="info">
-          <h3>Web Developer</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="service-icon">
-          <i class="fas fa-object-group"></i>
-        </div>
-        <div class="info">
-          <h3>Youtuber</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="work" id="work">
-    <div class="title reveal">
-      <div class="section-title">My Work</div>
-    </div>
-    <div class="content">
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work1.jpg" alt="">
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work2.jpg" alt="">
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work3.jpg" alt="">
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work4.jpg" alt="">
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work5.jpg" alt="">
-        </div>
-      </div>
-      <div class="card reveal">
-        <div class="card-img">
-          <img src="./images/work6.jpg" alt="">
-        </div>
+      <img src="./img/3.jpg" alt="">
       </div>
       <div class="title reveal">
-        <a href="#" class="btn">See All</a>
+        <a href="#" class="btn">Каталог</a>
       </div>
     </div>
   </section>
 
   <section class="contact" id="contact">
     <div class="title reveal">
-      <div class="section-title">Contact Me</div>
+      <div class="section-title">Контакты</div>
     </div>
     <div class="content">
       <div class="row">
@@ -201,8 +84,8 @@
             <i class="fas fa-map-marker-alt"></i>
           </div>
           <div class="info">
-            <h3>Address</h3>
-            <span>Tashkent City</span>
+            <h3>Адрес</h3>
+            <span>Ташкент,Олмазор,ул.Уста ширин,125А</span>
           </div>
         </div>
         <div class="card reveal">
@@ -210,8 +93,8 @@
             <i class="fas fa-phone"></i>
           </div>
           <div class="info">
-            <h3>Phone</h3>
-            <span>+ 1111 11 11</span>
+            <h3>Телефон</h3>
+            <span>+998 99 404 27 55 +998 99 843 30 90</span>
           </div>
         </div>
         <div class="card reveal">
@@ -219,8 +102,8 @@
             <i class="fas fa-envelope"></i>
           </div>
           <div class="info">
-            <h3>Email Address</h3>
-            <span>samar@gmail.com</span>
+            <h3>Email Адрес</h3>
+            <span>imomiddinovsardor@gmail.com</span>
           </div>
         </div>
         <div class="card reveal">
@@ -229,34 +112,38 @@
           </div>
           <div class="info">
             <h3>Website</h3>
-            <span>MyPortfolio.org</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="contact-form reveal">
-          <h3>Send Message</h3>
-          <div class="input-box">
-            <input type="text" placeholder="Name">
-          </div>
-          <div class="input-box">
-            <input type="text" placeholder="Email">
-          </div>
-          <div class="input-box">
-            <textarea rows="8" cols="80" placeholder="Message"></textarea>
-          </div>
-          <div class="input-box">
-            <input type="submit" class="send-btn" value="Send">
+            <span>dveripremsavdolux.uz</span>
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <footer class="footer">
     <span class="footer-title">Samar Badriddinov</span>
     <p>Copyright @2021. All Rights Reserved.</p>
   </footer>
+
+    <div class="modal">
+      <div class="contact-form reveal">
+        <span class="close">&times;</span>
+        <h3>Send Message</h3>
+        <div class="input-box">
+          <input type="text" placeholder="Name">
+        </div>
+        <div class="input-box">
+          <input type="text" placeholder="Email">
+        </div>
+        <div class="input-box">
+          <textarea rows="8" cols="80" placeholder="Message"></textarea>
+        </div>
+        <div class="input-box">
+          <input type="submit" class="send-btn" value="Send">
+        </div>
+      </div>
+    </div>
+ 
+
+
 
   <script src="script.js"></script>
 </body>
