--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>Обрешетки</h3>
         <h3>Меж комнатные</h3>
       </div>
-      <a href="#" id="myModal" class="btn">Каталог</a>
+      <a href="#" id="m_btn" class="btn">Заказать</a>
       <div class="media-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -118,32 +118,28 @@
       </div>
     </div>
   </section>
+
+  <div class="modal-bg">
+    <div class="modal">
+      <span class="close">&times;</span>
+      <div class="input-box">
+        <input type="text" name="name" placeholder="Имя">
+      </div><br>
+      <div class="input-box">
+        <input type="text" name="phone" placeholder="Телефон номер">
+      </div><br>
+      <div class="input-box">
+        <textarea rows="8" cols="20" name="msg" placeholder="Сообщения"></textarea><br>
+        <a href="#" type="submit" class="btn">Отправить</a>
+      </div>
+    </div>
+  </div>
+
+
   <footer class="footer">
     <span class="footer-title">Samar Badriddinov</span>
     <p>Copyright @2021. All Rights Reserved.</p>
   </footer>
-
-    <div class="modal">
-      <div class="contact-form reveal">
-        <span class="close">&times;</span>
-        <h3>Send Message</h3>
-        <div class="input-box">
-          <input type="text" placeholder="Name">
-        </div>
-        <div class="input-box">
-          <input type="text" placeholder="Email">
-        </div>
-        <div class="input-box">
-          <textarea rows="8" cols="80" placeholder="Message"></textarea>
-        </div>
-        <div class="input-box">
-          <input type="submit" class="send-btn" value="Send">
-        </div>
-      </div>
-    </div>
- 
-
-
 
   <script src="script.js"></script>
 </body>
