--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>PremSavdoLux</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 </head>
@@ -35,9 +35,9 @@
       </div>
       <a href="#" id="m_btn" class="btn">Заказать</a>
       <div class="media-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-telegram"></i></a>
+        <a href="https://web.facebook.com/sardor.imomiddinov.9?_rdc=1&_rdr"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/dveri_premsavdolux/"><i class="fab fa-instagram"></i></a>
+        <a href="https://t.me/Sardor_1985"><i class="fab fa-telegram"></i></a>
       </div>
     </div>
   </section>
@@ -68,7 +68,7 @@
       <img src="./img/3.jpg" alt="">
       </div>
       <div class="title reveal">
-        <a href="#" class="btn">Каталог</a>
+        <a href="/katolog.html" class="btn">Каталог</a>
       </div>
     </div>
   </section>
@@ -120,7 +120,7 @@
   </section>
 
   <div class="modal-bg">
-    <div class="modal">
+    <form action="#" class="modal">
       <span class="close">&times;</span>
       <div class="input-box">
         <input type="text" name="name" placeholder="Имя">
@@ -130,15 +130,14 @@
       </div><br>
       <div class="input-box">
         <textarea rows="8" cols="20" name="msg" placeholder="Сообщения"></textarea><br>
-        <a href="#" type="submit" class="btn">Отправить</a>
+        <button type="submit" class="btn">Отправить</button>
       </div>
-    </div>
+    </form>
   </div>
 
 
   <footer class="footer">
-    <span class="footer-title">Samar Badriddinov</span>
-    <p>Copyright @2021. All Rights Reserved.</p>
+    <span class="footer-title">Prem Savdo Lux ©</span>
   </footer>
 
   <script src="script.js"></script>
