--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div><br>
       <div class="input-box">
         <textarea rows="8" cols="20" name="msg" placeholder="Сообщения"></textarea><br>
-        <button type="submit" class="btn">Отправить</button>
+        <button type="submit" id="otp" class="btn">Отправить</button>
       </div>
     </form>
   </div>
